--- a/app/src/main/res/drawable/bg_btn_connect.xml
+++ b/app/src/main/res/drawable/bg_btn_connect.xml
@@ -6,6 +6,6 @@
         android:viewportHeight="88">
         <path
             android:name="rounded-corner-shape"
-            android:fillColor="@color/emerald40"
+            android:fillColor="@color/primary"
             android:pathData="M28,0L115,0A28,28 0,0 1,143 28L143,60A28,28 0,0 1,115 88L28,88A28,28 0,0 1,0 60L0,28A28,28 0,0 1,28 0z" />
 </vector>
