--- a/app/src/main/res/drawable/av_connect_to_cancel.xml
+++ b/app/src/main/res/drawable/av_connect_to_cancel.xml
@@ -10,7 +10,7 @@
             android:viewportHeight="88">
             <path
                 android:name="rounded-corner-shape"
-                android:fillColor="@color/emerald40"
+                android:fillColor="@color/primary"
                 android:pathData="M28,0L115,0A28,28 0,0 1,143 28L143,60A28,28 0,0 1,115 88L28,88A28,28 0,0 1,0 60L0,28A28,28 0,0 1,28 0z" />
 
         </vector>
@@ -32,7 +32,7 @@
                 <objectAnimator
                     android:duration="@integer/default_transition_anim_duration"
                     android:propertyName="fillColor"
-                    android:valueFrom="@color/emerald40"
+                    android:valueFrom="@color/primary"
                     android:valueTo="@color/indigo60" />
             </set>
         </aapt:attr>
