--- a/app/src/main/res/drawable/av_stop_connect.xml
+++ b/app/src/main/res/drawable/av_stop_connect.xml
@@ -41,7 +41,7 @@
                     android:duration="@integer/default_transition_anim_duration"
                     android:propertyName="fillColor"
                     android:valueFrom="@color/red30"
-                    android:valueTo="@color/emerald40" />
+                    android:valueTo="@color/primary" />
             </set>
         </aapt:attr>
     </target>
