--- a/app/src/main/res/layout/fragment_connectionsettings.xml
+++ b/app/src/main/res/layout/fragment_connectionsettings.xml
@@ -131,7 +131,7 @@
                             android:paddingVertical="8dp"
                             android:paddingHorizontal="8dp"
                             android:contentDescription="@string/bridge_settings"
-                            android:src="@drawable/connection_settings"
+                            android:src="@drawable/ic_gear"
                             app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />
