--- a/app/src/main/res/drawable/ic_copy_simple.xml
+++ b/app/src/main/res/drawable/ic_copy_simple.xml
@@ -5,9 +5,9 @@
     android:viewportHeight="24">
   <path
       android:pathData="M6.75,2.75C6.198,2.75 5.75,3.198 5.75,3.75C5.75,4.302 6.198,4.75 6.75,4.75H19.25V17.25C19.25,17.802 19.698,18.25 20.25,18.25C20.802,18.25 21.25,17.802 21.25,17.25V3.75C21.25,3.198 20.802,2.75 20.25,2.75H6.75Z"
-      android:fillColor="#000000"/>
+      android:fillColor="@color/on_surface"/>
   <path
       android:pathData="M3.75,5.75C3.198,5.75 2.75,6.198 2.75,6.75V20.25C2.75,20.802 3.198,21.25 3.75,21.25H17.25C17.802,21.25 18.25,20.802 18.25,20.25V6.75C18.25,6.198 17.802,5.75 17.25,5.75H3.75ZM4.75,19.25V7.75H16.25V19.25H4.75Z"
-      android:fillColor="#000000"
+      android:fillColor="@color/on_surface"
       android:fillType="evenOdd"/>
 </vector>
