--- a/app/src/main/res/drawable/ic_onion_rings.xml
+++ b/app/src/main/res/drawable/ic_onion_rings.xml
@@ -5,13 +5,13 @@
     android:viewportHeight="24">
   <path
       android:pathData="M12,19C15.866,19 19,15.866 19,12C19,8.134 15.866,5 12,5C8.134,5 5,8.134 5,12C5,15.866 8.134,19 12,19ZM12,21C16.971,21 21,16.971 21,12C21,7.029 16.971,3 12,3C7.029,3 3,7.029 3,12C3,16.971 7.029,21 12,21Z"
-      android:fillColor="#000000"
+      android:fillColor="@color/on_surface"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M12,15.5C13.933,15.5 15.5,13.933 15.5,12C15.5,10.067 13.933,8.5 12,8.5C10.067,8.5 8.5,10.067 8.5,12C8.5,13.933 10.067,15.5 12,15.5ZM12,17.5C15.038,17.5 17.5,15.038 17.5,12C17.5,8.962 15.038,6.5 12,6.5C8.962,6.5 6.5,8.962 6.5,12C6.5,15.038 8.962,17.5 12,17.5Z"
-      android:fillColor="#000000"
+      android:fillColor="@color/on_surface"
       android:fillType="evenOdd"/>
   <path
       android:pathData="M14,12C14,13.105 13.105,14 12,14C10.895,14 10,13.105 10,12C10,10.895 10.895,10 12,10C13.105,10 14,10.895 14,12Z"
-      android:fillColor="#000000"/>
+      android:fillColor="@color/on_surface"/>
 </vector>
