--- a/app/src/main/res/drawable/ic_prohibit.xml
+++ b/app/src/main/res/drawable/ic_prohibit.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="24">
   <path
       android:pathData="M12,2C6.477,2 2,6.477 2,12C2,17.523 6.477,22 12,22C17.523,22 22,17.523 22,12C22,6.477 17.523,2 12,2ZM7.094,5.68C8.449,4.627 10.151,4 12,4C16.418,4 20,7.582 20,12C20,13.849 19.373,15.551 18.32,16.906L7.094,5.68ZM5.68,7.094C4.627,8.449 4,10.151 4,12C4,16.418 7.582,20 12,20C13.849,20 15.551,19.373 16.906,18.32L5.68,7.094Z"
-      android:fillColor="#000000"
+      android:fillColor="@color/primary"
       android:fillType="evenOdd"/>
 </vector>
