--- a/app/src/main/res/layout/chip_item.xml
+++ b/app/src/main/res/layout/chip_item.xml
@@ -13,7 +13,7 @@
             android:ellipsize="end"
             app:chipBackgroundColor="@android:color/transparent"
             app:chipSurfaceColor="@android:color/transparent"
-            app:closeIcon="@drawable/ic_close"
+            app:closeIcon="@drawable/ic_x_circle"
             app:closeIconEnabled="true"
             app:closeIconTint="@color/on_surface_variant"
             app:chipStartPadding="@dimen/default_padding"
