--- a/app/src/main/res/layout/include_error_frame.xml
+++ b/app/src/main/res/layout/include_error_frame.xml
@@ -34,7 +34,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_error" />
+                app:srcCompat="@drawable/ic_connect_broken" />
 
             <TextView
                 android:id="@+id/textView"
