--- a/app/src/main/res/menu/app_routing_menu.xml
+++ b/app/src/main/res/menu/app_routing_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/refresh_circuits"
-        android:icon="@drawable/ic_all_new_circuits"
+        android:icon="@drawable/ic_refresh_all"
         android:title="@string/action_refresh_circuits"
         android:contentDescription="@string/action_refresh_circuits"
         app:showAsAction="always" />
