fix toolbars after switch to material design 3. Remove elevation of collapsed toolbars as that is not visible in figma

--- a/app/src/main/res/layout/fragment_offline_help.xml
+++ b/app/src/main/res/layout/fragment_offline_help.xml
@@ -17,6 +17,8 @@
             android:fitsSystemWindows="true"
             android:background="@color/purpleDark"
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
+            app:liftOnScroll="false"
+            app:elevation="0dp"
             >
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
