--- a/app/src/main/res/layout/fragment_app_detail.xml
+++ b/app/src/main/res/layout/fragment_app_detail.xml
@@ -22,6 +22,8 @@
             android:fitsSystemWindows="true"
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
             android:background="?attr/colorPrimary"
+            app:liftOnScroll="false"
+            app:elevation="0dp"
             >
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
