--- a/app/src/main/res/layout/fragment_app_routing.xml
+++ b/app/src/main/res/layout/fragment_app_routing.xml
@@ -21,18 +21,22 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
+            app:liftOnScroll="false"
+            app:elevation="0dp"
             >
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
+                style="?attr/collapsingToolbarLayoutLargeStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
                 app:title="@string/apps"
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
+                android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:toolbarId="@+id/toolbar">
 
