--- a/app/src/main/res/layout/fragment_bridgebot.xml
+++ b/app/src/main/res/layout/fragment_bridgebot.xml
@@ -46,7 +46,10 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:theme="@style/Theme.TorVPN.AppBarOverlay">
+            android:theme="@style/Theme.TorVPN.AppBarOverlay"
+            app:liftOnScroll="false"
+            app:elevation="0dp"
+            >
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:fitsSystemWindows="true"
