--- a/app/src/main/res/layout/fragment_configure.xml
+++ b/app/src/main/res/layout/fragment_configure.xml
@@ -21,20 +21,23 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
+            app:liftOnScroll="false"
+            app:elevation="0dp"
             >
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
-                style="Widget.Material3.CollapsingToolbarLayout"
+                style="?attr/collapsingToolbarLayoutLargeStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
                 app:title="@string/action_configure"
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="noScroll"
                 app:toolbarId="@+id/toolbar">
 
                 <com.google.android.material.appbar.MaterialToolbar
@@ -42,7 +45,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
-                    app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />
+                    app:popupTheme="@style/Theme.TorVPN.PopupOverlay"
+                   />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
