--- a/app/src/main/res/layout/fragment_connectionsettings.xml
+++ b/app/src/main/res/layout/fragment_connectionsettings.xml
@@ -25,17 +25,20 @@
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/app_bar_height"
+            android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
+            app:liftOnScroll="false"
+            app:elevation="0dp"
             android:theme="@style/Theme.TorVPN.AppBarOverlay">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
-                style="Widget.Material3.CollapsingToolbarLayout"
+                style="?attr/collapsingToolbarLayoutLargeStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
+                android:background="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:title="@string/connection"
                 app:toolbarId="@+id/toolbar">
