fix bottom navigation layout after switch to material design 3

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
             android:layout_gravity="start"
             android:paddingBottom="@dimen/bottom_nav_padding"
             android:paddingTop="@dimen/bottom_nav_padding"
-            android:background="@color/indigo60"
+            android:background="@color/surface_container"
+            app:itemActiveIndicatorStyle="@color/surface_container"
             app:itemRippleColor="@color/indigo50"
             app:itemTextColor="@color/bottom_nav_text_selector"
             app:layout_constraintBottom_toBottomOf="parent"
