move toggles to material design 3

--- a/app/src/main/res/layout/app_detail_layout_no_tor_support.xml
+++ b/app/src/main/res/layout/app_detail_layout_no_tor_support.xml
@@ -114,7 +114,7 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <!-- protect this app switch -->
-        <androidx.appcompat.widget.SwitchCompat
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/smProtectAllApps"
             style="@style/toggle"
             android:layout_width="match_parent"
