--- a/app/src/main/res/color/toggle_track_color.xml
+++ b/app/src/main/res/color/toggle_track_color.xml
@@ -1,6 +1,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/purple40" android:state_checked="true" android:state_enabled="true"/>
-    <item android:color="@color/purple40_40" android:state_checked="true" android:state_enabled="false"/>
-    <item android:color="@color/indigo50_40" android:state_enabled="false"/>
-    <item android:color="@color/indigo50"/>
+    <item android:color="@color/primary_variant" android:state_checked="true" android:state_enabled="true"/>
+    <item android:color="@color/primary_variant" android:state_checked="true" android:state_enabled="false"/>
+    <item android:color="@color/inverse_surface" android:state_enabled="false"/>
+    <item android:color="@color/inverse_surface"/>
 </selector>
