--- a/app/src/main/res/drawable/super_toggle_background.xml
+++ b/app/src/main/res/drawable/super_toggle_background.xml
@@ -3,13 +3,13 @@
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <corners android:radius="26dp" />
-            <solid android:color="@color/purple30"/>
+            <solid android:color="@color/primary"/>
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="26dp" />
-            <solid android:color="@color/indigo70"/>
+            <solid android:color="@color/surface_container"/>
         </shape>
     </item>
 </selector>
