--- a/app/src/main/res/layout/app_routing_table_header.xml
+++ b/app/src/main/res/layout/app_routing_table_header.xml
@@ -8,7 +8,7 @@
         android:orientation="vertical"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <androidx.appcompat.widget.SwitchCompat
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/smProtectAllApps"
             style="@style/super_toggle"
             android:layout_width="match_parent"
