--- a/app/src/main/res/layout/app_switch_item_view.xml
+++ b/app/src/main/res/layout/app_switch_item_view.xml
@@ -44,7 +44,7 @@
             android:layout_marginHorizontal="@dimen/compact_padding"
             android:paddingHorizontal="@dimen/compact_padding"
             />
-        <androidx.appcompat.widget.SwitchCompat
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/smItemSwitch"
             style="@style/toggle"
             android:layout_width="wrap_content"
