--- a/app/src/main/res/layout/fragment_connectionsettings.xml
+++ b/app/src/main/res/layout/fragment_connectionsettings.xml
@@ -74,7 +74,7 @@
                     android:layout_marginBottom="8dp"
                     android:background="@drawable/round_bridge_info_bg">
 
-                    <androidx.appcompat.widget.SwitchCompat
+                    <com.google.android.material.materialswitch.MaterialSwitch
                         android:id="@+id/switch_use_bridge"
                         style="@style/super_toggle"
                         android:layout_width="match_parent"
