--- a/app/src/main/res/layout/icon_text_entry_view.xml
+++ b/app/src/main/res/layout/icon_text_entry_view.xml
@@ -58,7 +58,7 @@
             />
 
         />
-        <androidx.appcompat.widget.SwitchCompat
+        <com.google.android.material.materialswitch.MaterialSwitch
             android:id="@+id/smItemSwitch"
             style="@style/toggle"
             android:layout_width="wrap_content"
